arm-oraclelinux-wls-cluster/src/main/arm/nestedtemplates/nsgNestedTemplate.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "name_networkSecurityGroup": {
            "type": "string",
            "metadata": {
                "description": "Network Security Group name"
            }
        },
        "deny_public_access_for_admin_server": {
            "type": "bool",
            "defaultValue": false
        },
        "deny_public_access_for_managed_server": {
            "type": "bool",
            "defaultValue": false
        }
    },
    "variables": {
        "const_subnetPrefix": {
            "type": "string",
            "defaultValue": "10.0.0.0/24"
        }
    },
    "resources": [
        {
            "type": "Microsoft.Resources/deployments",
            "apiVersion": "2020-06-01",
            "name": "nsgNestedTemplateStart",
            "properties": {
                "mode": "Incremental",
                "template": {
                    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
                    "contentVersion": "1.0.0.0",
                    "resources": [
                    ]
                }
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "name": "[concat(parameters('name_networkSecurityGroup'),'/','WebLogicAdminPortsAllowed')]",
            "condition": "[not(parameters('deny_public_access_for_admin_server'))]",
            "apiVersion": "2020-06-01",
            "properties": {
                "protocol": "TCP",
                "sourcePortRange": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 210,
                "direction": "Inbound",
                "destinationPortRanges": [
                    "7001",
                    "7002"
                ],
                "sourceAddressPrefix": "[variables('const_subnetPrefix')]"
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "name": "[concat(parameters('name_networkSecurityGroup'),'/','WebLogicAdminPortsDenied')]",
            "condition": "[parameters('deny_public_access_for_admin_server')]",
            "apiVersion": "2020-06-01",
            "properties": {
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationAddressPrefix": "*",
                "access": "Deny",
                "priority": 211,
                "direction": "Inbound",
                "destinationPortRanges": [
                    "7001",
                    "7002"
                ],
                "sourceAddressPrefix": "Internet"
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "name": "[concat(parameters('name_networkSecurityGroup'),'/','WebLogiManagedPortsAllowed')]",
            "condition": "[not(parameters('deny_public_access_for_managed_server'))]",
            "apiVersion": "2020-06-01",
            "properties": {
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationAddressPrefix": "*",
                "access": "Deny",
                "priority": 220,
                "direction": "Inbound",
                "destinationPortRanges": [
                    "8001"
                ],
                "sourceAddressPrefix": "[variables('const_subnetPrefix')]"
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "name": "[concat(parameters('name_networkSecurityGroup'),'/','WebLogiManagedPortsDenied')]",
            "condition": "[parameters('deny_public_access_for_managed_server')]",
            "apiVersion": "2020-06-01",
            "properties": {
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationAddressPrefix": "*",
                "access": "Deny",
                "priority": 221,
                "direction": "Inbound",
                "destinationPortRanges": [
                    "8001"
                ],
                "sourceAddressPrefix": "Internet"
            }
        },
        {
            "type": "Microsoft.Resources/deployments",
            "apiVersion": "2020-06-01",
            "name": "nsgNestedTemplateEnd",
            "properties": {
                "mode": "Incremental",
                "template": {
                    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
                    "contentVersion": "1.0.0.0",
                    "resources": [
                    ]
                }
            }
        }
    ]
}
